--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ nav-links{
 
 
 
-/*------course------*/
+/*------rse2rse------*/
 
 .course{
     width: 53%;
@@ -580,7 +580,7 @@ html,body{
   transition: all 0.3s ease-out;
 }
 .wrapper .button:nth-child(1):hover .icon{
-  background: #4267B2;
+  background: #000000;
 }
 .wrapper .button:nth-child(2):hover .icon{
   background: #5865F2;
@@ -600,6 +600,9 @@ html,body{
 .wrapper .button:hover .icon i{
   color: #fff;
 }
+
+
+
 .wrapper .button span{
   font-size: 23px;
   font-weight: 400;
@@ -607,14 +610,19 @@ html,body{
   margin-left: 7px;
   transition: all 0.3s ease-out;
 }
+
+
 .wrapper .button:nth-child(1) span{
-  color: #4267B2;
+  color: #000000;
 }
 .wrapper .button:nth-child(2) span{
   color: #5865F2;
 }
 .wrapper .button:nth-child(3) span{
   color: #FF0000;
+}
+.wrapper .button:nth-child(4) span{
+  color: #4dcdff;
 }
 
 /*-----footers------*/
